--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -11,7 +11,26 @@
 		<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script> 
-		 <title>Parcoursearch - Le moteur de recherche libre pour Parcoursup</title>
+		<title>Parcoursearch - Le moteur de recherche libre pour Parcoursup</title>
+		<meta property="og:title" content="Le moteur de recherche libre pour Parcoursup" />
+		<meta property="og:description" content="Parcoursearch est un moteur de recherche libre pour Parcoursup. Il permet de rechercher des formations et des établissements en fonction de critères personnalisés." />
+		<meta property="og:site_name" content="Parcoursearch" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://parcoursearch.vincelinise.com" />
+		<meta property="og:image" content="/banner.jpg" />
+		<meta property="og:image:width" content="1280" />
+		<meta property="og:image:height" content="640" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@ecnivtwelve" />
+		<meta name="twitter:creator" content="@ecnivtwelve" />
+		<meta name="twitter:title" content="Le moteur de recherche libre pour Parcoursup" />
+		<meta name="twitter:description" content="Parcoursearch est un moteur de recherche libre pour Parcoursup. Il permet de rechercher des formations et des établissements en fonction de critères personnalisés." />
+		<meta name="twitter:image" content="/banner.jpg" />
+		<meta name="description" content="Parcoursearch est un moteur de recherche libre pour Parcoursup. Il permet de rechercher des formations et des établissements en fonction de critères personnalisés." />
+		<meta name="keywords" content="Parcoursearch, Parcoursup, moteur de recherche, libre, formations, établissements, critères, personnalisés" />
+		<meta name="author" content="Vince Linise" />
+		<meta name="robots" content="index, follow" />
+		<meta name="googlebot" content="index, follow" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
